results/SVCOMP/4-shot/log-HttpServletResponse-2024_03_19_00_21_22.txt
import java.io.IOException;
import java.io.PrintWriter;

public class HttpServletResponse {

    //@ requires string != null;
    //@ requires !string.contains("<bad/>");
    //@ ensures \nothing;
    public void sendRedirect(String string) throws IOException {
        checkNoSymbolic(string);
    }

    //@ ensures \result != null;
    //@ ensures \result.checkNoSymbolic(s) == \result;
    public PrintWriter getWriter() throws IOException {
        return new PrintWriter(System.out) {
            //@ requires x != null;
            //@ requires !x.contains("<bad/>");
            //@ ensures \nothing;
            @Override
            public void println(String x) {
                checkNoSymbolic(x);
            }

            //@ requires x != null;
            //@ requires !String.valueOf(x).contains("<bad/>");
            //@ ensures \nothing;
            @Override
            public void println(Object x) {
                checkNoSymbolic(String.valueOf(x));
            }
        };
    }

    //@ requires s != null;
    //@ requires !s.contains("<bad/>");
    //@ ensures \nothing;
    public void setContentType(String s) {
        checkNoSymbolic(s);
    }

    //@ requires s != null;
    //@ ensures \nothing;
    private void checkNoSymbolic(String s) {
        if (s != null && s.contains("<bad/>")) {
            assert false;
        }
    }
}
/home/max/Documents/JMLGPT/tmp/HttpServletResponse.java:8: error: incompatible types: <none> cannot be converted to boolean
    //@ ensures \nothing;
                ^
/home/max/Documents/JMLGPT/tmp/HttpServletResponse.java:14: error: cannot find symbol
    //@ ensures \result.checkNoSymbolic(s) == \result;
                                        ^
  symbol:   variable s
  location: class HttpServletResponse
/home/max/Documents/JMLGPT/tmp/HttpServletResponse.java:19: error: incompatible types: <none> cannot be converted to boolean
            //@ ensures \nothing;
                        ^
/home/max/Documents/JMLGPT/tmp/HttpServletResponse.java:27: error: incompatible types: <none> cannot be converted to boolean
            //@ ensures \nothing;
                        ^
/home/max/Documents/JMLGPT/tmp/HttpServletResponse.java:37: error: incompatible types: <none> cannot be converted to boolean
    //@ ensures \nothing;
                ^
/home/max/Documents/JMLGPT/tmp/HttpServletResponse.java:43: error: incompatible types: <none> cannot be converted to boolean
    //@ ensures \nothing;
                ^
6 errors

